--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
-    "stefanini-datatable": "^0.0.14",
-    "stf-datatable": "0.0.15",
+    "stf-datatable": "^0.0.15",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
