--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.4.2",
-    "stf-datatable": "0.0.27",
+    "stf-datatable": "^0.0.28",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
